--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li>
 							<ul class="address-text">
 								<li><b>NAME</b></li>
-								<li>I'M ROB LEE</li>
+								<li>I'M yashwant chauragade</li>
 							</ul>
 						</li>
 						<li>
